Limit file activity by user spaces scope
